# arb-mvp

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  debug_dom.py  debug_live.py  pyproject.toml  test_fixes.py  test_parsers.py
backend/app/: main.py
backend/app/arb/: engine.py
backend/app/core/: config.py
backend/app/middleware/: auth.py
backend/app/models/: odds.py  opportunity.py
backend/app/scrapers/: base.py  betmgm.py  betrivers.py  draftkings.py  fanduel.py
backend/app/services/: opportunity_service.py  scrape_cache.py
backend/app/sources/: api_source.py  base.py  mock_source.py  scrapling_source.py
backend/arb_mvp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/debug_html/: betmgm_nba.html  caesars_nba.html  draftkings_nba.html  fanduel_nba.html
backend/debug_html2/: betmgm_nba.html  betrivers_matches.html  betrivers_matches_wait.html  betrivers_nba.html  betrivers_nba2.html  caesars_nba.html  fanduel_google.html  fanduel_nba.html  hardrock.html
backend/tests/: test_engine.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: BookStatusPanel.tsx  OfflineScreen.tsx  OpportunityCard.tsx  SportTabs.tsx
